--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -28,12 +28,23 @@ Andr\'e Wobst}
 
 \maketitle
 
-\ifhtml % make abstact better available (as in the python docs)
+\ifhtml % make abstact better available (as in the Python docs)
 \chapter*{Front Matter\label{front}}
 \fi
 \begin{abstract}
 \noindent
-TODO: Insert an abstract about \PyX{}.
+\PyX{} is a Python package to create encapsulated PostScript figures. It
+provides classes and methods to access basic PostScript functionality
+at an abstract level. At the same time the emerging structures are
+very convenient to produce all kinds of drawings in a non-interactive
+way. In combination with the Python language itself the user can just
+code any complexity of the figure wanted. Additionally an
+\TeX{}/\LaTeX{} interface enables one to use the famous high quality
+typesetting within the figures.
+
+A major part of \PyX{} on top of the already described basis is the
+provision of high level functionality for complex tasks like 2d plots
+in publication-ready quality.
 \end{abstract}
 
 \tableofcontents
