the canvas methods set, draw, stroke and fill no longer return self, i.e., the canvas, but None
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1541 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -133,6 +133,7 @@ TODO for 0.6:
     - canvas constructor no longer accepts variable argument list but
       expects a list of attrs as first argument (defaulting to []) and
       a texrunner as second argument (defaulting to text.defaulttexrunner)
+    - set, draw, stroke and fill no longer return self, i.e., the canvas, but None
   - tex module:
     - not imported by default anymore
     - obsolete warning when importing this module
