names and texts keyword removed from bar axis
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1549 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -83,6 +83,7 @@ TODO for 0.6:
       - graph data rewrite
     - axis zeropath feature has been removed
     - mergelabels removed; linpart doesn't have a label argument anymore
+    - names and texts removed from baraxis
     - iteration on graph style, when it is used several times in the same graph
     - symbols + lines -> symbollines; symbols do not allow setting lineattrs,
       and lines not symbolattrs
