--- a/manual/color.tex
+++ b/manual/color.tex
@@ -5,7 +5,7 @@ PostScript provides different color models. They are available to
 \PyX{} by different color classes, which just pass the colors down to
 the PostScript level. This implies, that there are no conversion
 routines between different color models available. However, some color
-model conversion routines are included in python's standard library in
+model conversion routines are included in Python's standard library in
 the module \texttt{colorsym}. Furthermore also the comparision of
 colors within a color model is not supported, but might be added in
 future versions at least for checking color identity and for ordering
